log/build_2024-09-24_19-14-37/py_pubsub/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher_member_function.py", line 32
    if __name__ == "__main__"
                             ^
SyntaxError: expected ':'

